--- a/FrontEnd/src/Styles/Expense.css
+++ b/FrontEnd/src/Styles/Expense.css
@@ -134,12 +134,13 @@
 }
 
 .form-input {
-    padding: 10px 14px;
+    width: 90%;
+    padding: 10px 12px;
     border: 2px solid #e2e8f0;
     border-radius: 8px;
     font-size: 14px;
     transition: all 0.3s ease;
-    outline: none;
+    outline: blue;
 }
 
 .form-input:focus {
