--- a/FrontEnd/src/Styles/Final.css
+++ b/FrontEnd/src/Styles/Final.css
@@ -1209,8 +1209,41 @@
 
   .final-table th,
   .final-table td {
-    padding: 8px 6px;
+    padding: 8px 0px;
     font-size: 0.8rem;
+  }
+
+  .final-wrapper {
+    padding: 5px 2px;
+  }
+
+  .final-title {
+    font-size: 5px;
+    flex-direction: row;
+  }
+
+  .final-container {
+    padding: 0;
+  }
+
+  .action-buttons {
+    display: flex;
+    padding: 15px;
+    margin: 15px 10px;
+    justify-content: center;
+    border-top: 2px solid #00acc1;
+    gap: 15px;
+    flex-wrap: wrap;
+    flex-direction: row;
+
+  }
+
+  .edit-btn,
+  .clear-btn,
+  .print-btn,
+  .save-btn,
+  .download-btn {
+    width: 80px;
   }
 
   .final-table th {
@@ -1225,13 +1258,45 @@
     font-size: 0.7rem;
   }
 
+  .price-input-container {
+    width: 50px;
+  }
+
+  .header-first-line {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 10px;
+  }
+
+  .form-date {
+    padding: 2px 5px;
+    font-size: 10px;
+  }
+
+  .toggle-slider {
+    font-size: 5px;
+    width: 20px;
+  }
+
+  .header-second-line {
+    display: flex;
+    gap: 45px;
+    padding-right: 50px;
+    justify-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
   .price-input {
-    font-size: 0.9rem;
-    padding: 8px 12px;
-    min-width: 100px;
+    display: flex;
+    font-size: 0.5rem;
+    margin: 0%;
+    width: 60px;
+    padding: 5px 5px;
+    min-width: 10px;
   }
 
   .price-label {
-    font-size: 0.8rem;
+    font-size: 10px;
   }
 }
